IMPLEMENTED  COUNTRY ONCLICK TO CALENDARHEATMAP FUNCTIONALITY.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
             <section class="section" id="music-parameters">
                 <div class="section-header">
-                    <h2>PARAMETERS OVER YEARS</h2>
+                    <h2>PARAMETER REPRESENTATION</h2>
                 </div>
                 <div id="calendar-heatmap">
                     <!-- Calendar Heatmap will be rendered here -->
