Added header to music parameters.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section id="analysis-section">
             <div class="section-header">
                 <div id="boxplot-container">
+                    <h2>MUSIC PARAMETERS</h2>
                     <!-- Box plots will be rendered here -->
 
                 </div>
