--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <section class="section" id="music-parameters">
                 <div class="section-header">
-                    <h2>PARAMETER REPRESENTATION</h2>
+                    <h2>Yearly Trends in Music Parameters</h2>
                 </div>
                 <div id="calendar-heatmap">
                     <!-- Calendar Heatmap will be rendered here -->
@@ -33,7 +33,7 @@
 
             <section class="section" id="country-contribution">
                 <div class="section-header">
-                    <h2>CONTRIBUTION OF COUNTRIES</h2>
+                    <h2>Global Contributions of Countries in Music Data</h2>
                 </div>
                 <div id="geo-heatmap">
                     <!-- Geo Heatmap will be rendered here -->
