Change in headings of visualization sections.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <section class="section" id="country-contribution">
                 <div class="section-header">
-                    <h2>Global Contributions of Countries in Music Data</h2>
+                    <h2>Global Contributions of Countries</h2>
                 </div>
                 <div id="geo-heatmap">
                     <!-- Geo Heatmap will be rendered here -->
