Heading for section.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     </header>
     <div class="content">
         <section id="analysis-section">
+            <section id="box-plot-section">
+            <h2>MUSIC PARAMETERS</h2>
             <div class="section-header">
+                
                 <div id="boxplot-container">
-                    <h2>MUSIC PARAMETERS</h2>
+                    
                     <!-- Box plots will be rendered here -->
 
                 </div>
 
             </div>
-
+        </section>
             <section class="section" id="music-parameters">
                 <div class="section-header">
                     <h2>Yearly Trends in Music Parameters</h2>
